# Manipulator_reverse_kinematic

./: .cproject  .project  CMakeLists.txt  manipulator_1.scad  openscad_run.sh
physical_designs/: manipulator_1.scad
src/: DrawGL3DLeg.cpp  DrawGL3DLeg.h  DrawLegXYoZ.cpp  DrawLegXYoZ.h  DrawLegXZoY.cpp  DrawLegXZoY.h  FailedBehaviours.cpp  FailedBehaviours.h  GtkMM_Test.cpp  HelloWorld.cpp  HelloWorld.h  Leg3DDrawWindow.cpp  Leg3DDrawWindow.h  LegsMgr.cpp  LegsMgr.h  Point3.cpp  Point3.h  XYoZArea.cpp  XYoZArea.h  XZoYArea.cpp  XZoYArea.h
src/core/: AngleDataChunk.cpp  AngleDerivates.cpp  AngleDerivates.h  ConstraintPerpendicular.cpp  ContrainsTooClose.cpp  DerivatesVector.cpp  DerivatesVector.h  DerivativeFuncsStorage.cpp  DerivativeFuncsStorage.h  DerivativeFunctions.cpp  DerivativeFunctions.h  DistanceDataChunk.cpp  DistanceDerivates.cpp  DistanceDerivates.h  ErrorFuncStorage.cpp  ErrorFuncStorage.h  ErrorFunctions.cpp  ErrorFunctions.h  GiNaCTypesChunk.cpp  GiNaCTypesChunk.h  HardFire.cpp  HardFire.h  IDataChunk.h  IDerivative.h  IReceivingDerivative.h  ISolveConstraints.h  InterpolatedMove.cpp  InterpolatedStopStartSine.h  InterpolationBase.h  InterpolationCircle.h  InterpolationExp.h  InterpolationFade.h  InterpolationPow.cpp  InterpolationPow2.h  Leg.cpp  Leg.h  LegManipulator.cpp  LegManipulator.h  ManipulatorUniConverter.h  PerpendicularAngleDerivate.h  (+5 more)
src/core/core/: ConstraintPerpendicular.h  ContrainsTooClose.h  DerivativeFuncsStorage.h  ErrorFuncStorage.cpp  ErrorFuncStorage.h  IDataChunk.h  InterpolatedMove.h  InterpolatedMove2.cpp  InterpolatedMove2.h  InterpolatedStopStartSine.cpp  InterpolationBase.cpp  InterpolationCircle.cpp  InterpolationExp.cpp  InterpolationExp5.cpp  InterpolationExp5.h  InterpolationFade.cpp  InterpolationLinear.cpp  InterpolationLinear.h  InterpolationPow.h  InterpolationPow2.cpp  InterpolationSine.cpp  InterpolationSine.h  Solver.cpp  (+5 more)
src/ginac/: clifford.cpp  excompiler.cpp  function.cpp  function.h
src/tests/: Tests.cpp  Tests.h
(+49 files in other folders)
